[package]

name = "hyper-protocol"
version = "0.1.0"
authors = ["Sean McArthur <sean.monstar@gmail.com>"]

[dependencies.mucell]
git = "https://github.com/chris-morgan/mucell"
[dependencies.unsafe-any]
version = "*"

[dependencies.hyper-core]
path = "../core/"

[dependencies.time]
version = "*"
[dependencies.mime]
version = "*"
[dependencies.cookie]
version = "*"
