[package]

name = "hyper-protocol"
version = "0.1.0"
authors = ["Sean McArthur <sean.monstar@gmail.com>"]

[dependencies.hyper-core]
path = "../core/"
version = "0.1.0"


[dependencies.mucell]
version = "*"
[dependencies.unsafe-any]
version = "*"
[dependencies.time]
version = "*"
[dependencies.mime]
version = "*"
[dependencies.cookie]
version = "*"
